--- a/MvcBlogSitesi/Views/AdminUye/Index.cshtml
+++ b/MvcBlogSitesi/Views/AdminUye/Index.cshtml
@@ -33,32 +33,33 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-<tr>
-    <td>
-        @Html.DisplayFor(modelItem => item.Yetki.YetkiAdı)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.KullanıcıAdı)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Email)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Şifre)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.AdSoyad)
-    </td>
-    <td>
-        <img src="@item.ÜyeFoto" width="100px" />
-    </td>
-    <td>
-        @Html.ActionLink("Düzenle", "Edit", new { id = item.ÜyeNo })
-        @Html.ActionLink("Detay", "Details", new { id = item.ÜyeNo })
-        @Html.ActionLink("Sil", "Delete", new { id = item.ÜyeNo })
-    </td>
-</tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Yetki.YetkiAdı)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.KullanıcıAdı)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Email)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Şifre)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.AdSoyad)
+            </td>
+            <td>
+                <img src="@item.ÜyeFoto" width="100px" />
+            </td>
+            <td>
+                @Html.ActionLink("Düzenle", "Edit", new { id = item.ÜyeNo })
+                @Html.ActionLink("Detay", "Details", new { id = item.ÜyeNo })
+                @Html.ActionLink("Sil", "Delete", new { id = item.ÜyeNo })
+            </td>
+        </tr>
+    }
 
 </table>
