--- a/MvcBlogSitesi/Views/Shared/_Layout.cshtml
+++ b/MvcBlogSitesi/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/Home/Hakkimizzda/">Hakkımızda</a>
+                        <a class="nav-link" href="/Home/Hakkimizda/">Hakkımızda</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/Home/Iletisim/">İletişim</a>
